@@ -72,6 +72,7 @@ typedef
       Addr_DataSym,     // in a global data sym
       Addr_Variable,    // variable described by the debug info
       Addr_SectKind,    // Section from a mmap-ed object file
+      Addr_BrkSegment,  // address in brk data segment
       Addr_SegmentKind  // Client segment (mapped memory)
    }
    AddrTag;
@@ -173,6 +174,15 @@ struct _AddrInfo {
          HChar      *objname;
          VgSectKind kind;
       } SectKind;
+
+      // Described address is or was in the brk data segment.
+      // brk_limit is the limit that was in force
+      // at the time address was described. 
+      // If address is >= brk_limit, it means address is in a zone
+      // of the data segment that was shrinked.
+      struct {
+         Addr brk_limit; // limit in force when address was described.
+      } BrkSegment;
 
       struct {
          SegKind segkind;   // SkAnonC, SkFileC or SkShmC.
